vion-container/envoy/envoy_vs1.yml
static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: api
              domains: ["api-public.*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: api_public }
            - name: dgraph
              domains: ["dgraph.*"]
              routes:
              - match: { prefix: "/health" }
                route: { cluster: alpha }

              - match: { prefix: "/admin" }
                route: { cluster: alpha }

              - match: { prefix: "/state" }
                route: { cluster: alpha }

              - match: { prefix: "/ui/" }
                route: { cluster: alpha }

              - match: { prefix: "/query" }
                route: { cluster: alpha }

              - match: { prefix: "/mutate" }
                route: { cluster: alpha }

              - match: { prefix: "/alter" }
                route: { cluster: alpha }

              - match: { prefix: "/" }
                route: { cluster: ratel }
          http_filters:
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
  clusters:
  - name: api_public
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: api_public
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api_public_dev
                port_value: 60000
  - name: ratel
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: ratel
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ratel
                port_value: 8000
  - name: alpha
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: alpha
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: alpha
                port_value: 8080
  - name: tracking
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: tracking
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: routes_logs
                port_value: 80
